tests/should-fail/shadowing/global-effect-effect.j
type effect extends handle
globals
	effect effect
endglobals

